fix(server): fix swagger docs for export endpoint
